--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -23,20 +23,20 @@
 
 <div class="row">
 
-  <div class="col-md-9 frontpage-text" style="font-family: Roboto, sans-serif; font-size: 16pt">
+  <div class="col-md-8 frontpage-text" style="font-family: Roboto, sans-serif; font-size: 16pt">
 {% call rmt.remote('banner_text') %}
   <p>The UK government has pressured Internet Service Providers (ISPs) into promoting filters to prevent children and young people from seeing internet content that is supposed to be for over 18s.  This may seem like a good idea, but in reality filters block much more than they are supposed to, which means information is being censored.</p>
   
   <p>It is very possible sites you care about are being restricted.  The Blocked project is here to help prevent this from happening.  <a href="#">Read more.</a></p>
 {% endcall %}
   </div>
-  <div class="col-md-3 stats">
+  <div class="col-md-3 col-md-offset-1 stats hidden-sm">
 
     <div><span>{{ "{:,}".format(stats.urls_reported) }}</span> sites submitted</div>
     <div><span>{{ "{:,}".format(stats.urls_tested) }}</span> sites tested</div>
     <div><span>{{ "{:,}".format(stats.blocked_sites_detected_total) }}</span> blocked sites detected</div>
-    <div><span>{{ "%0.02f%%"|format(100*stats.blocked_sites_detected_default_filter/stats.blocked_sites_sample_size) }}</span> of sites blocked
-      <div style="font-size: smaller; line-height: 1.4em">based on the Alexa top 100,000.</div>
+    <div><span>{{ "%0.02f%%"|format(100*stats.blocked_sites_detected_default_filter/stats.blocked_sites_sample_size) }}</span> of Alexa top 100,000 sites blocked on default filter settings
+
     </div>
 
 
