--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -25,6 +25,8 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class=""><a href="/control">Home</a></li>
+          <li class=""><a href="{{ url_for('.users') }}">Users</a></li>
+          <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
           <li class=""><a href="{{ url_for('.savedlists') }}">Saved Lists</a></li>
           <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Blacklist</a></li>
           <li class=""><a href="{{url_for('.logout')}}" class="">Log out</a></li>
