--- a/BlockedFrontend/templates/admin/courtorders.html
+++ b/BlockedFrontend/templates/admin/courtorders.html
@@ -6,25 +6,30 @@
 
 {% block body %}
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-6">
 
     <h1>{{pagetitle}}</h1>
 
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6">
     <div class="well">
 <form action="{{url_for('.courtorders_add')}}" method="POST">
   <legend>Add new court order <a href="#" onclick="$(this).parent().next().show()"><span class="glyphicon glyphicon-chevron-down"></span></a> </legend>
 
-  <div style="display: none">
+  <div style="display: none" class="row">
+    <div class="col-md-6">
   {{forms.text_field('Name','name')}}
   {{forms.text_field('Date (yyyy-mm-dd)','date')}}
   {{forms.text_field('Wiki URL','url')}}
+      {{forms.submit('Add')}}
+    </div>
+    <div class="col-md-6">
   {{forms.text_field('Judgment','judgment')}}
   {{forms.text_field('Judgment Date (yyyy-mm-dd)','judgment_date')}}
   {{forms.text_field('Judgment URL','judgment_url')}}
-  {{forms.submit('Add')}}
+    </div>
   </div>
+
 </form>
     </div>
   </div>
