--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -12,6 +12,9 @@
       <h2>{{ order.name}}</h2>
       <h3>{{ order.date }}</h3>
       <p>{{ order.url }}</p>
+      <p>{{ order.judgment }}</p>
+      <p>{{ order.judgment_date }}</p>
+      <p>{{ order.judgment_url }}</p>
 
   </div>
   <div class="col-md-4">
@@ -26,6 +29,7 @@
   </div>
 </div>
 <div class="row">
+  <div class="col-md-12">
 
 <table class="table">
 <tr>
@@ -54,9 +58,46 @@
 
 {#  {{ paging.page_list('.courtorders', page, pagecount, 25) }} #}
 
-
-
 </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h2>Court order information links</h2>
+    <table class="table table-striped">
+      <tr>
+        <th>Network</th>
+        <th>URL</th>
+        <th></th>
+      </tr>
+      {% for netinfo in infourls %}
+      <tr>
+        <td>{{ netinfo['network_name'] }}</td>
+        <td>{{ netinfo['url'] }}</td>
+        <td>
+          <form method="POST" action="{{ url_for('.courtorders_delete_isp_url') }}">
+            <input type="hidden" name="name" value="{{ order.name }}" />
+            <input type="hidden" name="network_name" value="{{netinfo['network_name']}}" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+          </form>
+
+        </td>
+      </tr>
+      {% endfor %}
+    </table>
+    </div>
+  <div class="col-md-6 ">
+    <div class="well">
+    <form class="form" method="POST" action="{{url_for('.courtorders_add_isp_url')}}">
+      <legend>Add new ISP Information URL</legend>
+      <input type="hidden" name="name" value="{{order.name}}" />
+      {{forms.select_field('ISP', 'network_name', None, config.ALL_ISPS|sort) }}
+      {{forms.text_field('URL','url')}}
+      {{forms.submit('Add')}}
+
+    </form>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
