--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -19,6 +19,9 @@ banner_text_block(bool): show banner text block, default true
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{ titletag if titletag is defined else pagetitle }}</title>
 
+    {% block og %}
+    {% endblock %}
+
     <!-- Bootstrap -->
 
 <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
