Add temporary og stuff to results page; openrightsgroup/blocked-org-uk#226

--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -19,7 +19,7 @@
 <meta property="og:type" content="article" />
 <meta property="article:author" content="https://www.openrightsgroup.org" />
 <meta property="og:locale" content="en_GB" />
-<meta property="og:title" name="twitter:title" content="{{pagetitle}}" />
+<meta property="og:title" name="twitter:title" content="Site report for {{pagetitle}}" />
 <meta name="twitter:site" content="" />
 <meta name="twitter:site:id" content="" />
 <meta property="og:url" name="twitter:url" content="{{request.url}}" />
