--- a/BlockedFrontend/templates/admin/admin.html
+++ b/BlockedFrontend/templates/admin/admin.html
@@ -6,23 +6,7 @@
 
 {% block body %}
 <div class="row">
-<div class="col-md-6">
 
-
-<div class="alert alert-success">Admin login successful.</div>
-
-<p>
-You can now:
-<ul>
-<li>Create saved lists</li>
-<li>Amend the domain blacklist</li>
-</ul>
-</p>
-
-<div>
-</div>
-
-</div>
 <div class="col-md-6">
 <div class="well">
 <h2>Cached CMS content</h2>
@@ -31,6 +15,20 @@ You can now:
 <div>
 <form action="{{url_for('.cacheclear')}}" method="POST">
 <input type="submit" class="btn btn-warning" value="Clear Cache" />
+</form>
+</div>
+
+</div><!-- /.well -->
+</div><!-- /.col -->
+
+    <div class="col-md-6">
+<div class="well">
+<h2>Force-check URL</h2>
+
+<div>
+<form action="{{url_for('.forcecheck')}}" method="POST">
+    {{ forms.text_field('URL','url') }}
+<input type="submit" class="btn btn-primary" value="Submit" />
 </form>
 </div>
 
