--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -23,69 +23,75 @@
 
 <div class="row">
 
-  <div class="col-md-8 frontpage-text" style="font-family: Roboto, sans-serif; font-size: 16pt">
+  <div class="col-md-7 frontpage-text" style="font-family: Roboto, sans-serif; font-size: 16pt">
 {% call rmt.remote('banner_text') %}
   <p>The UK government has pressured Internet Service Providers (ISPs) into promoting filters to prevent children and young people from seeing internet content that is supposed to be for over 18s.  This may seem like a good idea, but in reality filters block much more than they are supposed to, which means information is being censored.</p>
   
   <p>It is very possible sites you care about are being restricted.  The Blocked project is here to help prevent this from happening.  <a href="#">Read more.</a></p>
 {% endcall %}
   </div>
-  <div class="col-md-3 col-md-offset-1 stats hidden-sm">
 
-    <div><span>{{ "{:,}".format(stats.urls_reported) }}</span> sites submitted</div>
-    <div><span>{{ "{:,}".format(stats.urls_tested) }}</span> sites tested</div>
-    <div><span>{{ "{:,}".format(stats.blocked_sites_detected_total) }}</span> blocked sites detected</div>
-    <div><span>{{ "%0.02f%%"|format(100*stats.blocked_sites_detected_default_filter/stats.blocked_sites_sample_size) }}</span> of Alexa top 100,000 sites blocked on default filter settings
+  {% if config.MODULE_UNBLOCK %}
 
-    </div>
+<div class="col-md-5 shaded-row fpaction">
+<h3>For example&#x2026;</h3>
 
-
+<div style="background-color: #f8f8f8; padding: 0.5em">
+  <div  class="randomurl hidden-xs"><a href="{{site.url}}" target="_blank" rel="nofollow">{{site.url}}</a></div>
+  <div  class="randomurl hidden-sm hidden-md hidden-lg"><a href="{{site.url}}" target="_blank" title="{{ site.url }}" rel="nofollow">{{site.url|domain}}</a></div>
+  <p>{{site.title|null('no title')}}</p>
   </div>
+  <div style="text-align: right; padding-bottom: 0.5em">
+    &#x2026;is blocked for <strong>{{blockednetworks|join_en }}</strong> customers using filters.
+  </div>
+
+  <div class="row">
+    <div class="col-md-7">Has this site been blocked in error?</div>
+    <div class="col-md-5 randomaction">
+    <a href="{{url_for('unblock.unblock', url=site.url)}}" class="btn  btn-primary">Request unblock</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-7"></div>
+    <div class="col-md-5 randomaction">
+      <a href="{{ url_for('site.site', url=site.url) }}" class="btn  btn-default">View full results</a>
+    </div>
+  </div>
+
+  <div class="row" >
+    <div class="col-md-6"></div>
+    <div class="col-md-6 randomaction">
+      <a href="/" class="btn btn-default">See another blocked site</a>
+    </div>
+  </div>
+
+  {% if savedlist %}
+  <div>This site was selected from the <a href="{{ url_for('list.show_list', name=savedlist.name) }}">{{ savedlist.name }}</a> curated list.</div>
+  {% endif %}
+
+</div> <!-- /.col -->
+
+{% endif %}
 
 </div><!-- /.row -->
 
 <!-- template BasicPage -->
-{% if config.MODULE_UNBLOCK %}
-<div class="row shaded-row" style="margin-top: 2.8em">
-<div class="col-md-12">
-<h3>For example&#x2026;</h3>
 
-<div  style="text-align: center">
-<div  class="randomurl hidden-xs"><a href="{{site.url}}" target="_blank" rel="nofollow">{{site.url}}</a></div>
-<div  class="randomurl hidden-sm hidden-md hidden-lg"><a href="{{site.url}}" target="_blank" title="{{ site.url }}" rel="nofollow">{{site.url|domain}}</a></div>
-<p>{{site.title|null('no title')}}</p>
-is blocked for <strong>{{blockednetworks|join_en }}</strong> customers using filters.
+<div class="row" style="padding-bottom: 0px">
+  <div class="col-md-7 stats hidden-sm">
+    <div class="row" style="padding-bottom: 0px; margin-bottom: 0px">
 
-<div class="row">
-<div class="col-md-4">
-<div>Has this site been blocked in error?</div>
-<a href="{{url_for('unblock.unblock', url=site.url)}}" class="btn btn-lg btn-primary">Request unblock</a>
-</div>
-
-<div class="col-md-4">
-<div>&nbsp;</div>
-<a href="{{ url_for('site.site', url=site.url) }}" class="btn btn-lg btn-default">View full results</a>
-</div>
-
-<div class="col-md-4">
-<div>&nbsp;</div>
-<a href="/" class="btn btn-lg btn-default">See another blocked site</a>
-</div>
-</div> <!-- /.row -->
-
-{% if savedlist %}
-<div>This site was selected from the <a href="{{ url_for('list.show_list', name=savedlist.name) }}">{{ savedlist.name }}</a> curated list.</div>
-{% endif %}
-
-</div> <!--/.center-->
-
+    <div class="col-md-6"><span>{{ "{:,}".format(stats.urls_reported) }}</span> sites submitted</div>
+    <div class="col-md-6"><span>{{ "{:,}".format(stats.urls_tested) }}</span> sites tested</div>
+    <div class="col-md-6"><span>{{ "{:,}".format(stats.blocked_sites_detected_total) }}</span> blocked sites detected</div>
+    <div class="col-md-6"><span>{{ "%0.02f%%"|format(100*stats.blocked_sites_detected_default_filter/stats.blocked_sites_sample_size) }}</span> of Alexa top 100,000 sites blocked on default filter settings</div>
+    </div>
+  </div>
 
 </div>
-</div>
 
-{% endif %}
-
-<div class="row" style="margin-top: 2em">
+<div class="row" style="padding-top: 0px">
 <div class="col-md-7">
 <h3>Check a website</h3>
 
