--- a/BlockedFrontend/templates/admin/courtorders_edit.html
+++ b/BlockedFrontend/templates/admin/courtorders_edit.html
@@ -8,84 +8,57 @@
 <div class="row">
   <div class="col-md-8">
 
-    <h1>{{pagetitle}}</h1>
-    <form action="{{url_for('.courtorders_update')}}" method="POST">
-  <legend>Edit {{ order.name}}</legend>
-  <input type="hidden" name="old_name" value="{{ order.name }}" />
+  <h1>{{pagetitle}}</h1>
+  <form action="{{url_for('.courtorders_update', id=obj.id)}}" method="POST">
+  <legend>Edit {{ obj.name}}</legend>
   <div class="row">
     <div class="col-md-6">
-  {{forms.text_field('Name','name', order.name)}}
-  {{forms.text_field('Date (yyyy-mm-dd)','date', order.date)}}
-  {{forms.text_field('Wiki URL','url', order.url)}}
+
+  {{forms.text_field('Name','name', obj.name)}}
+  {{forms.text_field('Date (yyyy-mm-dd)','date', obj.date)}}
+  {{forms.text_field('Wiki URL','url', obj.url)}}
       {{forms.submit('Update')}}
     </div>
-    <div class="col-md-6">
-  {{forms.text_field('Judgment','judgment', order.judgment)}}
-  {{forms.text_field('Judgment Date (yyyy-mm-dd)','judgment_date', order.judgment_date)}}
-  {{forms.text_field('Judgment URL','judgment_url', order.judgment_url)}}
-    </div>
   </div>
-
-
 </form>
 
 
   </div>
 </div>
-<h2>ISP Info URLs</h2>
+
 <div class="row">
   <div class="col-md-8">
-
+    <h2>Court Orders</h2>
 <table class="table">
-<tr>
-
-  <th>Network</th>
-  <th>URL</th>
-
-  <th></th>
-</tr>
-{% for url in infourls %}
-<tr>
-  <td>
-    {{url.network_name}}
-  </td>
-  <td>
-    {{url.url}}
-  </td>
-  <td>
-      <form method="POST" action="{{ url_for('.courtorders_delete_isp_url')}}">
-      <input type="hidden" name="name" value="{{order.name}}" />
-      <input type="hidden" name="network_name" value="{{url.network_name}}" />
-
-      <input type="submit" class="btn btn-danger" value="Delete" />
-    </form>
-  </td>
-</tr>
-
-{% endfor %}
+  <tr>
+    <th>Name</th>
+    <th>Network</th>
+    <th>Date</th>
+    <th>URL</th>
+  </tr>
+  {% for order in orders %}
+  <tr>
+    <td>{{ order.name }}</td>
+    <td>{{ order.network_name }}</td>
+    <td>{{ order.date }}</td>
+    <td>{{ order.url }}</td>
+  </tr>
+  {% endfor %}
 </table>
 
 
-{#  {{ paging.page_list('.courtorders', page, pagecount, 25) }} #}
-
-</div>
-<div class="col-md-4">
-  <div class="well">
-<form action="{{ url_for('.courtorders_add_isp_url') }}" method="POST" class="form">
-  <legend>Add ISP Info URL</legend>
-  {{ forms.select_field('ISP Name','network_name', None, config.ISPS) }}
-  {{ forms.text_field('URL', 'url') }}
-  <input type="hidden" name="name" value="{{order.name}}" />
-  {{ forms.submit('Add URL') }}
-
-</form>
   </div>
+  <div class="col-md-4 well">
+    <form action="{{ url_for('.courtorders_add_order', judgment_id=obj.id)}}" method="POST">
+      <legend>Add court order</legend>
+      {{ forms.text_field('Name', 'name') }}
+      {{ forms.text_field('Date (yyyy-mm-dd)', 'date') }}
+      {{ forms.text_field('URL', 'url') }}
+      {{ forms.select_field('Network','network_name',None,config.ISPS) }}
+      {{ forms.submit('Add') }}
+    </form>
   </div>
-
-
 </div>
-
-
 {% endblock %}
 
 
